Fixed first QA batch from @ThaiFoodBlog
List of bugs:
* "own nest" - no focusme.
* "own nest" after error - shows "old pass" field
* rtl feed name too close to timestamp
* flock_edit_form becomes flock form after save :)

--- a/static/style.css
+++ b/static/style.css
@@ -270,7 +270,8 @@ div.page ul.messages li small, .item-time {
 div.item-time {
     direction:ltr !important;
     float:right;
-    margin:0px 2px;
+    margin:-12px 0 0 8px;
+
 }
 
 div.node-details {
